Update about and help (#292)
* esa logo added, target set to blank to open links in a new tab

* information about ESA support added to the about page

* typo fixed, styling improved

* information about ESA support added; EODC removed

* information about ESA support added; EODC removed

* some improvements done

* link to the SUM added

* dot added

--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -63,9 +63,10 @@
         <div class="container-marketing">
 
             <div class="overflow">
-                <a href="https://www.awst.at/"><img src="{% static 'images/logo_awst.png' %}"></a>
-                <a href="https://www.geo.tuwien.ac.at/"><img src="{% static 'images/logo_tuwien_geo.png' %}"></a>
-                <a href="https://www.ffg.at/"><img src="{% static 'images/logo_ffg.png' %}"></a>
+                <a href="https://www.awst.at/" target="_blank"><img src="{% static 'images/logo_awst.png' %}"></a>
+                <a href="https://www.geo.tuwien.ac.at/" target="_blank"><img src="{% static 'images/logo_tuwien_geo.png' %}"></a>
+                <a href="https://www.esa.int/" target="_blank"><img src="{% static 'images/logo_esa.png' %}"></a>
+                <a href="https://www.ffg.at/" target="_blank"><img src="{% static 'images/logo_ffg.png' %}"></a>
             </div>
 
             <hr class="featurette-divider">
@@ -83,7 +84,8 @@
                         </ul>
                         The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality control of soil moisture data products and provider users with <b>traceable validation results</b>.
                     </p>
-                    <p>QA4SM is supported by the <a href="https://www.ffg.at/en">Austrian Space Application Programme</a>.</p>
+                    <p>QA4SM was created thanks to  support of the <a href="https://www.ffg.at/en" target="_blank">Austrian Space Application Programme</a>.
+                        From 2021 on the application is also supported by the <a href="https://www.esa.int/" target="_blank">European Space Agency</a>.</p>
                 </div>
                 <div class="col-md-5">
 
@@ -147,7 +149,6 @@
         <p class="float-right"><a href="#">Back to top</a></p>
         <p>
             Created by <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST</a>.
-            Hosted on <a href="https://www.eodc.eu/">EODC</a>.
         </p>
     </footer>
 
