--- a/validator/static/css/about.css
+++ b/validator/static/css/about.css
@@ -16,3 +16,10 @@
     height: 6rem;
     float: right;
 }
+
+#logo_esa {
+    height: 4rem;
+    float: right;
+    margin-left: 2rem;
+    margin-bottom: 0.5rem;
+}
