disable and unset bootstrapping if third dataset is removed

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -1028,6 +1028,8 @@
             } else {
                 $('#tcol').prop('checked', false);
                 $('#tcol').prop('disabled', true);
+                $('#bootstrap_tcol_cis').prop('checked', false);
+                $('#bootstrap_tcol_cis').prop('disabled', true);
             }
         }
 
