ngDefaultControl added to the country dropdown so the tests pass

--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -99,7 +99,8 @@
                       formControlName="country"
                       optionLabel="name"
                       optionValue="code"
-                      placeholder=" ">
+                      placeholder=" "
+                      ngDefaultControl>
           </p-dropdown>
           <label>Country</label>
           <span title="Optional. The country where your organisation (or you) resides."
