information on EODC removed, some styling adjusted

--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -165,15 +165,16 @@
       </div>
     </div>
   </div>
+  <hr class="featurette-divider">
+
+  <footer class="container-marketing">
+    <div>
+      Created by <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a>
+      and <a href="https://www.awst.at/">AWST</a>.
+    </div>
+  </footer>
 </main>
 
-<footer class="container">
-  <p>
-    Created by <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a>
-    and <a href="https://www.awst.at/">AWST</a>.
-    Hosted on <a href="https://www.eodc.eu/">EODC</a>.
-  </p>
-</footer>
 
 <qa-scroll-to-top></qa-scroll-to-top>
 
