about page updated

--- a/UI/src/app/pages/about/about.component.scss
+++ b/UI/src/app/pages/about/about.component.scss
@@ -26,3 +26,9 @@ main {
 #footer{
   text-align: justify;
 }
+#logo_esa {
+  height: 4rem;
+  float: right;
+  margin-left: 2rem;
+  margin-bottom: 0.5rem;
+}
