--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,65 +1,67 @@
 <main>
-    <div id="introduction">
-        <a href="https://www.ffg.at/en" rel="noreferrer">
-          <img alt="FFG logo" id="logo_ffg" [src]="logoFfg"></a>
-        The <b>QA4SM</b> project provides an operational online validation service for soil moisture products. It started
-        in May 2018 and is supported by the <a href="https://www.ffg.at/en">Austrian Research Promotion Agency
-        (Österreichische Forschungsförderungsgesellschaft, FFG)</a> in the
-        <a href="https://www.ffg.at/en/program/austrian-space-applications-programme-0">Austrian Space Application Programme</a>.
-    </div>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <td class="align-middle">
-                    <a
-                       href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/"
-                       target="_blank"
-                       rel="noreferrer">
-                      <img alt="TUWien logo" class="partner_logo" [src]="logoTuWien" style="width: 6.3rem"></a>
-                </td>
-                <td>
-                    <b>TU Wien (Vienna University of Technology)</b><br>
-                    Department of Geodesy and Geoinformation<br>
-                    Research Group Climate and Environmental Remote Sensing (CLIMERS)<br>
-                    Website: <a href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/">https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/</a><br>
-                    Contact: Wouter Dorigo (wouter.dorigo (at) tuwien.ac.at)<br>
-                    Tasks: Scientific lead and research, dataset support
-                </td>
-            </tr>
-            <tr>
-                <td class="align-middle">
-
-                    <a href="https://www.awst.at/" target="_blank" rel="noreferrer">
-                      <img alt="AWST logo" class="partner_logo" [src]="logoAwst" style="width: 5.1rem"></a>
-                </td>
-                <td>
-                    <b>AWST (Applied Science, Software and Technology)</b><br>
-                    Website: <a href="https://www.awst.at">https://www.awst.at</a><br>
-                    Contact: Alexander Boresch (boresch (at) awst.at)<br>
-                    Tasks: Project management, technical lead, webservice development and operations
-                </td>
-            </tr>
-            <tr>
-                <td class="align-middle">
-                    <a href="https://www.eodc.eu/" target="_blank" rel="noreferrer">
-                      <img alt="EODC logo" class="partner_logo" [src]="logoEodc" style="width: 4.5rem"></a>
-                </td>
-                <td>
-                    <b>EODC (Earth Observation Data Centre)</b><br>
-                    Website: <a href="https://www.eodc.eu/">https://www.eodc.eu</a><br>
-                    Contact: Christoph Reimer (christoph.reimer (at) eodc.eu)<br>
-                    Tasks: Data centre infrastructure
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-    <hr class="featurette-divider">
-
-    <p id="footer">
-        QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm" target="_blank" rel="noreferrer">It is available on GitHub.</a>
-        This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}" target="_blank" rel="noreferrer">version {{this.getAppVersion()}}</a>.
+  <div id="introduction">
+    <p>
+      <a href="https://www.ffg.at/en" rel="noreferrer">
+        <img alt="FFG logo" id="logo_ffg" [src]="logoFfg"></a>
+      The <b>QA4SM</b> project provides an operational online validation service for soil moisture products. It started
+      in May 2018 and is supported by the <a href="https://www.ffg.at/en">Austrian Research Promotion Agency
+      (Österreichische Forschungsförderungsgesellschaft, FFG)</a> in the
+      <a href="https://www.ffg.at/en/program/austrian-space-applications-programme-0">Austrian Space Application
+        Programme</a>.
     </p>
-<qa-scroll-to-top></qa-scroll-to-top>
+
+    <p>
+      <a href="https://www.esa.int/" target="_blank"><img alt="ESA logo" id="logo_esa" [src]="logoEsa"></a>
+      From 2021 on, QA4SM is further evolved within the <a href="https://www.geo.tuwien.ac.at/project-frm4sm/"
+                                                           target="_blank">FRM4SM</a> project, supported by the <a
+      href="https://www.esa.int/" target="_blank">European Space Agency</a>.
+    </p>
+  </div>
+
+  <table class="table">
+    <tbody>
+    <tr>
+      <td class="align-middle">
+        <a
+          href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/"
+          target="_blank"
+          rel="noreferrer">
+          <img alt="TUWien logo" class="partner_logo" [src]="logoTuWien" style="width: 6.3rem"></a>
+      </td>
+      <td>
+        <b>TU Wien (Vienna University of Technology)</b><br>
+        Department of Geodesy and Geoinformation<br>
+        Research Group Climate and Environmental Remote Sensing (CLIMERS)<br>
+        Website: <a href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/">https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/</a><br>
+        Contact: Wouter Dorigo (wouter.dorigo (at) tuwien.ac.at)<br>
+        Tasks: Scientific lead and research, dataset support
+      </td>
+    </tr>
+    <tr>
+      <td class="align-middle">
+
+        <a href="https://www.awst.at/" target="_blank" rel="noreferrer">
+          <img alt="AWST logo" class="partner_logo" [src]="logoAwst" style="width: 5.1rem"></a>
+      </td>
+      <td>
+        <b>AWST (Applied Science, Software and Technology)</b><br>
+        Website: <a href="https://www.awst.at">https://www.awst.at</a><br>
+        Contact: Alexander Boresch (boresch (at) awst.at)<br>
+        Tasks: Project management, technical lead, webservice development and operations
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <hr class="featurette-divider">
+
+  <p id="footer">
+    QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm"
+                                                                     target="_blank" rel="noreferrer">It is available on
+    GitHub.</a>
+    This site uses <a class="font-weight-bold"
+                      href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}"
+                      target="_blank" rel="noreferrer">version {{this.getAppVersion()}}</a>.
+  </p>
+  <qa-scroll-to-top></qa-scroll-to-top>
 </main>
