some information updated; styling links updated

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6085,6 +6085,8 @@ div.carousel-caption{
 .btn-action.p-button:hover, .btn-action-large.p-button:hover, .btn-action-home.p-button:hover{
   background-color: #213FE0;
   border-color: #213FE0;
+  color: white;
+  text-decoration: none;
 }
 
 .btn-action.p-button:focus, .btn-action-large.p-button:focus{
