--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -96,7 +96,8 @@
       </ul>
       The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality
       control of soil moisture data products and provider users with <b>traceable validation results</b>.
-      <p>QA4SM is supported by the <a href="https://www.ffg.at/en">Austrian Space Application Programme</a>.</p>
+      <p>QA4SM was created thanks to  support of the <a href="https://www.ffg.at/en" target="_blank">Austrian Space Application Programme</a>.
+        From 2021 on the application is also supported by the <a href="https://www.esa.int/" target="_blank">European Space Agency</a>.</p>
 
     </div>
     <div class="p-md-5">
