--- a/UI/src/style.variables.scss
+++ b/UI/src/style.variables.scss
@@ -1,6 +1,7 @@
 $base-color: #00AAE3;
 $base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$button-base-color: #4760E5;
+$button-base-color: #007BFF;
+//$button-base-color: #4760E5;
 $button-hover-color: #213FE0;
 $edit-name-button-backgroud-color: #00AAE3;
 $dropdown-buttons-background:  #f1f1f1;
