validate button styled

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -162,7 +162,7 @@
       <div class="p-col-12">
         <div>
           <div class="p-d-flex p-jc-center">
-            <p-button label="Validate" (onClick)="startValidation(true)"></p-button>
+            <p-button id="validateButton" label="Validate" icon="pi pi-play" (onClick)="startValidation(true)"></p-button>
           </div>
         </div>
       </div>
