dot added so that selector refers to a class

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -1638,7 +1638,7 @@ p-selectbutton.ng-dirty.ng-invalid > .p-selectbutton > .p-button {
   color: #ffffff;
 }
 
-p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
+.p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   border-color: #dc3545;
 }
 
