link to frm4sm project and some text fine-tuning done

--- a/validator/templates/validator/about.html
+++ b/validator/templates/validator/about.html
@@ -16,7 +16,7 @@
 
     <p align="justify">
         <a href="https://www.esa.int/" target="_blank"><img id="logo_esa" src="{% static 'images/logo_esa.png' %}"></a>
-        From 2021 on, QA4SM is further evolved within the <a href="https://www.geo.tuwien.ac.at/project-frm4sm/" target="_blank">FRM4SM</a> project, supported by the <a href="https://www.esa.int/" target="_blank">European Space Agency</a>.
+        From 2021 on, QA4SM is further evolved within the <a href="https://project-frm4sm.geo.tuwien.ac.at/" target="_blank">FRM4SM</a> project, supported by the <a href="https://www.esa.int/" target="_blank">European Space Agency</a>.
     </p>
 
     <table class="table borderless">
