--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -22,7 +22,7 @@
         <a id="manual"></a>
     <h1 class="h3 mb-3 font-weight-normal">User Manual</h1>
     <p>
-        Below we present basic overview of our service. More comprehensive information can be found in our
+        This page contains a quick user tutorial. More comprehensive information can be found in our
         <a target="_blank" href="https://www.geo.tuwien.ac.at/media/filer_public/15/6c/156cd163-cd29-4dd3-a132-820bcb653817/frm4sm_dt3-1_qa4sm_sum_v11.pdf">User Manual</a>.
     </p>
 
