--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -4720,8 +4720,10 @@ div.carousel-caption{
 }
 
 .p-menubar .p-menuitem-link .p-menuitem-icon {
-  color: #212529;
+  color: black;
   margin-right: 0.5rem;
+  font-weight: normal;
+  font-size: 1.1rem;
 }
 
 .p-menubar .p-menuitem-link .p-submenu-icon {
@@ -5065,12 +5067,12 @@ div.carousel-caption{
 }
 
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link .p-menuitem-icon {
-  color: #212529;
+  color: green;
   margin-right: 0.5rem;
 }
 
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link .p-submenu-icon {
-  color: #212529;
+  color: green;
 }
 
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link:not(.p-disabled):hover {
@@ -5357,7 +5359,7 @@ div.carousel-caption{
 }
 
 .p-tieredmenu .p-menuitem-link:not(.p-disabled):hover {
-  background: red;
+  background: #e9ecef;
 }
 
 .p-tieredmenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
