clear coordinates button styled

--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -12,7 +12,7 @@
 
       <div class="p-grid no-gutters">
         <div class="p-col-12">
-          <div class="p-d-flex p-jc-center">
+          <div class="p-d-flex p-jc-center  p-pb-2">
             Lower left
           </div>
         </div>
@@ -49,7 +49,7 @@
     <div class="p-col-12 p-sm-2">
       <div class="p-d-flex p-jc-center">
         <button pButton type="button" icon="pi pi-trash" pTooltip="Clear coordinates"
-                class="p-button-info p-mr-2" style="padding: 0.2rem;"
+                class="clearCoordinates p-button-info p-mr-2" style="padding: 0.2rem;"
                 (click)="clearCoordinatesOrSetDefault()"></button>
       </div>
     </div>
@@ -58,7 +58,7 @@
     <div class="p-col-12 p-sm-5">
       <div class="p-grid no-gutters">
         <div class="p-col-12">
-          <div class="p-d-flex p-jc-center">
+          <div class="p-d-flex p-jc-center p-pb-2">
             Upper right
           </div>
         </div>
