some vertical alignment done

--- a/UI/src/app/modules/metrics/components/metrics/metrics.component.html
+++ b/UI/src/app/modules/metrics/components/metrics/metrics.component.html
@@ -6,7 +6,7 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid">
+  <div class="p-grid p-pt-3">
     <div class="p-col-12">
       <qa-metric [metricModel]="tripleCollocationMetrics"
                  [disabled]="validationModel.datasetConfigurations.length<2"></qa-metric>
