--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -6,7 +6,7 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid">
+  <div class="p-grid p-pt-4">
     <div class="p-col-12 p-sm-6">
       <div class="p-float-label p-m-2">
         <p-calendar id="fromDateInput" dateFormat="yy-mm-dd" [monthNavigator]="true" [yearNavigator]="true"
