--- a/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
+++ b/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
@@ -6,8 +6,8 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid">
-    <div class="p-col-12">
+  <div class="p-grid p-pt-4">
+    <div class="p-col-6">
       <div class="p-float-label p-m-2">
         <p-dropdown id="anomaliesMethodSelector"
                     [options]="availableAnomalyMethodModels"
