--- a/UI/src/app/modules/scaling/components/scaling/scaling.component.html
+++ b/UI/src/app/modules/scaling/components/scaling/scaling.component.html
@@ -6,8 +6,8 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid">
-    <div class="p-col-12">
+  <div class="p-grid p-pt-4">
+    <div class="p-col-6">
       <div class="p-float-label p-m-2">
         <p-dropdown id="scalingMethodSelector" (onChange)="updateScalingModel()"
                     [options]="scalingModels"
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <div class="p-col-12 p-sm-6">
+    <div class="p-col-6 p-sm-6">
       <div class="p-float-label p-m-2" *ngIf="(selectedScalingModel|async).id!=noScalingId">
         <p-dropdown id="scalingReferenceSelector" (onChange)="updateScalingModel()"
                     [options]="scaleToModels"
