--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -6,7 +6,7 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid">
+  <div class="p-grid p-pt-1">
 
     <div class="p-col-12 p-sm-5">
 
