centering p-panel title on the validation page done

--- a/UI/src/app/modules/metrics/components/metrics/metrics.component.html
+++ b/UI/src/app/modules/metrics/components/metrics/metrics.component.html
@@ -1,4 +1,4 @@
-<p-panel header="Metrics" [toggleable]="true">
+<p-panel header="Metrics" [toggleable]="true" class="validation-row">
   <ng-template pTemplate="icons">
     <label class="p-panel-header-icon"
            pTooltip="Specify metrics to calculate. Basic metrics between data set pairs are always calculated."
