--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -19,7 +19,7 @@
 
       <!--  data column-->
       <div class="p-md-6 p-col-12">
-        <p-panel header="Data" [toggleable]="true">
+        <p-panel header="Data" [toggleable]="true" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
                    pTooltip="The soil moisture dataset which is to be validated, i.e. compared to the 'Reference' data."
@@ -74,7 +74,7 @@
 
       <!--  reference column-->
       <div class="p-md-6 p-col-12">
-        <p-panel header="Reference" [toggleable]="true">
+        <p-panel header="Reference" [toggleable]="true" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
                    pTooltip="The data which is to be used as a reference in the validation. The 'Data' will be compared against this reference."
@@ -106,7 +106,7 @@
 
       <!--      Map-->
       <div class="p-col-12">
-        <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel" collapsed="true">
+        <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel" collapsed="true" class="validation-row">
           <qa-map class="map" #qwerty
                   [spatialSubset]="validationModel.spatialSubsetModel"
                   [center]="[10, 52.5]"
