--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.scss
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.scss
@@ -1,3 +1,25 @@
 ::ng-deep .fixedWidthInput{
   width: 1rem;
 }
+
+#lowerLeft, #upperRight{
+  align-items: center;
+}
+
+.label {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  color: white;
+  line-height: 1rem;
+  height: 2.25rem;
+  padding: 1rem;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: #00AAE3;
+  display: flex;
+  align-items: center;
+  min-width: 7rem;
+}
+//#minLatInput, #minLonInput{
+//  width: 100%;
+//}
