Qa4sm hr master merged (#308)
* Autocleanup fix (#267)

* sending autocleanup email improved, so that it doesn't crash when there is no user assigned to the validation

* canceled validations do not have end_time attribute assigned so they need to be added separately, otherwise they're not removed automatically

* definition of expiry date takes into account canceled validations and set the initial_date variable to be the start_time attribute

* cleaning celery tasks list added for expiring validations (if they are old enough to be cleaned up, it means that something went wrong and the validation won't be finished)

* Small improvements (#272)

* printing information about the used environment added

* terms updated - information on the consistency with GDPR added

* Send email to users (#269)

* model emails added and registered

* model name fixed

* model name fixed

* SendEmailToUsers model created and registered

* name of the model and file updated

* email model updated

* email model updated

* email model updated, send_email method added

* EmailAdmin model updated

* send email added to the list of user actions

* save_related updated so that it sets sent=True if the email has been sent, what prevents from sending the same email twice

* order changed, so it's possible to use content of .email_admin in .custom_user_admin

* some printing removed

* adding redirecting to the mail from the user list

* id changed to pk

* field sent added to the list

* migration added

* date field removed

* removing celery tasks in case of error added (#273)

* Update mailer (#277)

* autocleanup and mailer improved, so that it send one email, regardless of the expiring validation number; test adjusted

* not needed printing removed

* sorting by users added

* autocleanupvalidations updated, so it removes validations belonging to a non-existing user (if they have not been published); tests updated according 

--- a/validator/templates/validator/about.html
+++ b/validator/templates/validator/about.html
@@ -7,11 +7,16 @@
 {% block content %}
 <div style="text-align: left; max-width: 40rem; width: 100%; margin: auto;">
     <p align="justify">
-        <a href="https://www.ffg.at/en"><img id="logo_ffg" src="{% static 'images/logo_ffg.png' %}"></a>
+        <a href="https://www.ffg.at/en" target="_blank"><img id="logo_ffg" src="{% static 'images/logo_ffg.png' %}"></a>
         The <b>QA4SM</b> project provides an operational online validation service for soil moisture products. It started
-        in May 2018 and is supported by the <a href="https://www.ffg.at/en">Austrian Research Promotion Agency
+        in May 2018 and is supported by the <a href="https://www.ffg.at/en" target="_blank">Austrian Research Promotion Agency
         (Österreichische Forschungsförderungsgesellschaft, FFG)</a> in the
-        <a href="https://www.ffg.at/en/program/austrian-space-applications-programme-0">Austrian Space Application Programme</a>.
+        <a href="https://www.ffg.at/en/program/austrian-space-applications-programme-0" target="_blank">Austrian Space Application Programme</a>.
+    </p>
+
+    <p align="justify">
+        <a href="https://www.esa.int/" target="_blank"><img id="logo_esa" src="{% static 'images/logo_esa.png' %}"></a>
+        From 2021 on, QA4SM is further evolved within the <a href="https://project-frm4sm.geo.tuwien.ac.at/" target="_blank">FRM4SM</a> project, supported by the <a href="https://www.esa.int/" target="_blank">European Space Agency</a>.
     </p>
 
     <table class="table borderless">
@@ -24,7 +29,7 @@
                     <b>TU Wien (Vienna University of Technology)</b><br>
                     Department of Geodesy and Geoinformation<br>
                     Research Group Climate and Environmental Remote Sensing (CLIMERS)<br>
-                    Website: <a href="https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/">https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/</a><br>
+                    Website: <a href="https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/" target="_blank">https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/</a><br>
                     Contact: Wouter Dorigo (wouter.dorigo (at) tuwien.ac.at)<br>
                     Tasks: Scientific lead and research, dataset support
                 </td>
@@ -35,20 +40,9 @@
                 </td>
                 <td class="align-left">
                     <b>AWST (Applied Science, Software and Technology)</b><br>
-                    Website: <a href="https://www.awst.at">https://www.awst.at</a><br>
+                    Website: <a href="https://www.awst.at" target="_blank">https://www.awst.at</a><br>
                     Contact: Alexander Boresch (boresch (at) awst.at)<br>
                     Tasks: Project management, technical lead, webservice development and operations
-                </td>
-            </tr>
-            <tr>
-                <td class="align-middle">
-                    <a href="https://www.eodc.eu/" target="_blank"><img class="partner_logo" src="{% static 'images/logo_eodc.png' %}"></a>
-                </td>
-                <td class="align-left">
-                    <b>EODC (Earth Observation Data Centre)</b><br>
-                    Website: <a href="https://www.eodc.eu/">https://www.eodc.eu</a><br>
-                    Contact: Christoph Reimer (christoph.reimer (at) eodc.eu)<br>
-                    Tasks: Data centre infrastructure
                 </td>
             </tr>
         </tbody>
