--- a/validator/templates/validator/terms.html
+++ b/validator/templates/validator/terms.html
@@ -13,7 +13,8 @@
 
     <p>
         The Quality Assurance for Soil Moisture (QA4SM) web service is developed by
-        <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST GmbH</a> with funding from the Austrian Space Applications Programme by <a href="https://www.ffg.at/">FFG</a>. It is hosted on <a href="https://www.eodc.eu/">EODC</a>.
+        <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST GmbH</a> with funding from the Austrian Space Applications Programme by <a href="https://www.ffg.at/">FFG</a>.
+        From 2021 on, the application is also supported by the <a href="https://www.esa.int/" target="_blank"> European Space Agency</a>.
         It aims to allow its users to validate soil moisture datasets in a traceable, transparent, reproducible and standardised fashion
         and to download the validation results for further use, for example in publications.<br/>
         In order to use the webservice, users must accept and follow the Terms and Conditions below:
@@ -48,10 +49,10 @@
         <li>
             <b>No warranties:</b>
             The results produced by the QA4SM webservice are provided for free and &quot;as is&quot;, i.e. without any warranty
-            as to their condition, consistency or suitability for a particular purpose. Neither TU Wien GEO nor AWST, EODC or the
+            as to their condition, consistency or suitability for a particular purpose. Neither TU Wien GEO nor AWST or the
             individual data providers can be held responsible for any errors or inconsistencies in the results provided by the
             QA4SM web service or for a timely delivery of results. Moreover, they have no obligation whatsoever relating to updates
-            or availailability of the results, data or web service.
+            or availability of the results, data or web service.
         </li>
         <li>
             <b>Termination:</b>
@@ -77,6 +78,9 @@
     </ol>
 
     <a id="privacy_policy"></a><h1 class="h3 mb-3 font-weight-normal">Privacy Policy</h1>
+    All personal user data are managed in agreement with the EU General Data Protection Regulation (GDPR).
+    The data controller are TU Wien and AWST jointly. User data are kept as long as users have a registered QA4SM account and are deleted when the account is deleted.
+    User data are processed in the following ways and for the following purposes: <br> <br>
     <ol>
         <li>
             <b>Email:</b> On registration, users are asked to provide a valid email address where they can receive notifications
