--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -12,11 +12,14 @@
               <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
             </label>
           </ng-template>
-          <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
-            and dataset. The reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
-            ({{ (refDatasetVersion$ | async)?.pretty_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
-          </div>
           <div *ngIf="(table$|async) as table" class="p-pb-3">
+            <div *ngIf="table.hasOwnProperty('error')" class="p-pb-3"> This validation has resulted in a file whose size
+              exceeds the maximum limit; for this reason, the statistics table cannot be generated on the fly.
+            </div>
+            <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
+              and dataset. The reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
+              ({{ (refDatasetVersion$ | async)?.pretty_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
+            </div>
           <span [innerHtml]="table | dompurify"></span>
           <div class="d-flex justify-content-between align-items-center">
             <button pButton
