--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -13,24 +13,27 @@
             </label>
           </ng-template>
           <div *ngIf="(table$|async) as table" class="p-pb-3">
-            <div *ngIf="table.hasOwnProperty('error')" class="p-pb-3"> This validation has resulted in a file whose size
+            <ng-template [ngIf]="table=='error file size'" [ngIfElse]="showTable" class="p-pb-3">
+              This validation has resulted in a file whose size
               exceeds the maximum limit; for this reason, the statistics table cannot be generated on the fly.
-            </div>
-            <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
-              and dataset. The reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
-              ({{ (refDatasetVersion$ | async)?.pretty_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
-            </div>
-          <span [innerHtml]="table | dompurify"></span>
-          <div class="d-flex justify-content-between align-items-center">
-            <button pButton
-                    type="button"
-                    icon="pi pi-download"
-                    label="Download .csv table"
-                    class="btn-action-large"
-                    title="Download the table to a .csv file"
-                    (click)="getSummaryStatisticsAsCsv()">
-            </button>
-          </div>
+            </ng-template>
+            <ng-template #showTable>
+              <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
+                and dataset. The reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
+                ({{ (refDatasetVersion$ | async)?.pretty_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
+              </div>
+              <span [innerHtml]="table | dompurify"></span>
+              <div class="d-flex justify-content-between align-items-center">
+                <button pButton
+                        type="button"
+                        icon="pi pi-download"
+                        label="Download .csv table"
+                        class="btn-action-large"
+                        title="Download the table to a .csv file"
+                        (click)="getSummaryStatisticsAsCsv()">
+                </button>
+              </div>
+            </ng-template>
           </div>
         </p-panel>
       </div>
