--- a/UI/src/app/modules/metrics/components/metric/metric.component.html
+++ b/UI/src/app/modules/metrics/components/metric/metric.component.html
@@ -1,7 +1,7 @@
 <div class="p-grid">
   <div class="p-col-12">
     <p-checkbox [label]="metricModel.description" [ngModel]="metricModel.value$|async"
-                (ngModelChange)="metricModel.value$.next($event)" [binary]="true"
+                (ngModelChange)="metricModel.value$.next($event)" [binary]="true" [disabled]="disabled"
     ></p-checkbox>
     <label class="p-panel-header-icon"
            pTooltip="{{metricModel.helperText}}"
