--- a/UI/src/app/modules/metrics/components/metrics/metrics.component.html
+++ b/UI/src/app/modules/metrics/components/metrics/metrics.component.html
@@ -9,7 +9,12 @@
   <div class="p-grid p-pt-3">
     <div class="p-col-12">
       <qa-metric [metricModel]="tripleCollocationMetrics"
-                 [disabled]="validationModel.datasetConfigurations.length<2"></qa-metric>
+                 [disabled]="validationModel.datasetConfigurations.length<2" (click)="switchOffBootstrap()"></qa-metric>
+    </div>
+    <div class="p-col-12">
+      <qa-metric [metricModel]="bootstrapTripleCollocationMetrics"
+                 [disabled]="validationModel.datasetConfigurations.length<2 ||
+                  !(validationModel.datasetConfigurations.length>1 && tripleCollocationMetrics.value$.getValue())"></qa-metric>
     </div>
   </div>
 </p-panel>
