--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -118,6 +118,11 @@
           <span *ngIf="!validationRun.tcol">deactivated. </span>
         </li>
 
+        <li>Bootstrapping of confidence intervals for Triple Collocation Analysis was
+          <span *ngIf="validationRun.bootstrap_tcol_cis">activated. </span>
+          <span *ngIf="!validationRun.bootstrap_tcol_cis">deactivated. </span>
+        </li>
+
         <li *ngIf="validationRun.scaling_method != 'none'; else elseScaling">Scaling reference:
           <span *ngFor="let config of configurations">
                 <span *ngIf="config.id === validationRun.reference_configuration">
