some styling of spatial subsetting field done

--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -8,19 +8,19 @@
   </ng-template>
   <div class="p-grid p-pt-1">
 
-    <div class="p-col-12 p-sm-5">
+    <div class="p-col-12 p-sm-5 p-pl-5">
       <div class="p-grid no-gutters" id="lowerLeft">
         <div class="p-col-12">
           <div class="p-d-flex p-jc-center  p-pb-2">
             <!--            Lower left-->
           </div>
         </div>
-        <div class="label p-col-1">
+        <div class="label p-col-4">
           <div class="p-fluid">
-            <span>Lower left</span>
+            <div>Lower left</div>
           </div>
         </div>
-        <div class="p-col-4 p-mx-0 p-px-0">
+        <div class="p-col-4 p-px-0 p-mx-0">
           <div class="p-fluid">
             <div class="p-float-label">
               <p-inputNumber id="minLatInput" [minFractionDigits]="1" [maxFractionDigits]="3"
@@ -33,7 +33,7 @@
           </div>
 
         </div>
-        <div class="p-col-4 p-mx-0 p-px-0">
+        <div class="p-col-4  p-px-0 p-mx-0">
           <div class="p-fluid">
             <div class="p-float-label ">
               <p-inputNumber id="minLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
@@ -58,14 +58,14 @@
     </div>
 
     <!--    Upper right coordinates-->
-    <div class="p-col-12 p-sm-5">
+    <div class="p-col-12 p-sm-5 p-pl-5">
       <div class="p-grid no-gutters" id="upperRight">
         <div class="p-col-12">
           <div class="p-d-flex p-jc-center p-pb-2">
 <!--            Upper right-->
           </div>
         </div>
-        <div class="label p-col-1">
+        <div class="label p-col-4">
           <div class="p-fluid">
             <span>Upper right</span>
           </div>
@@ -83,7 +83,7 @@
             </div>
           </div>
         </div>
-        <div class="p-col-4  p-mx-0 p-px-0">
+        <div class="p-col-4 p-px-0 p-mx-0">
           <div class="p-fluid">
             <div class="p-float-label ">
               <p-inputNumber id="maxLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
