--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.scss
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.scss
@@ -18,7 +18,8 @@
   background-color: #00AAE3;
   display: flex;
   align-items: center;
-  min-width: 7rem;
+  max-width: 7rem;
+  text-align: center;
 }
 //#minLatInput, #minLonInput{
 //  width: 100%;
