--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.scss
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.scss
@@ -4,23 +4,5 @@
 
 #lowerLeft, #upperRight{
   align-items: center;
+  justify-content: center;
 }
-
-.label {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  color: white;
-  line-height: 1rem;
-  height: 2.25rem;
-  padding: 1rem;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  background-color: #00AAE3;
-  display: flex;
-  align-items: center;
-  max-width: 7rem;
-  text-align: center;
-}
-//#minLatInput, #minLonInput{
-//  width: 100%;
-//}
