some spatial subsetting component styling improved

--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -8,8 +8,8 @@
   </ng-template>
   <div class="p-grid p-pt-1">
 
-    <div class="p-col-12 p-sm-5 p-pl-5">
-      <div class="p-grid no-gutters" id="lowerLeft">
+    <div class="p-col-12 p-sm-5">
+      <div class="p-grid" id="lowerLeft">
         <div class="p-col-12">
           <div class="p-d-flex p-jc-center  p-pb-2">
             <!--            Lower left-->
@@ -58,8 +58,8 @@
     </div>
 
     <!--    Upper right coordinates-->
-    <div class="p-col-12 p-sm-5 p-pl-5">
-      <div class="p-grid no-gutters" id="upperRight">
+    <div class="p-col-12 p-sm-5">
+      <div class="p-grid" id="upperRight">
         <div class="p-col-12">
           <div class="p-d-flex p-jc-center p-pb-2">
 <!--            Upper right-->
